# openai-sdk-agent

./: .env.example  .gitignore  README.md  guide.md  plan.md  pyproject.toml  test_api.py  test_calculator.py  testing-guide.md
src/openai_app/: __init__.py  main.py
src/openai_app/api/: __init__.py  main.py
src/openai_app/api/routes/: chat.py  health.py  tools.py
src/openai_app/api/schemas/: __init__.py  chat.py  tools.py
src/openai_app/cli/: __init__.py  commands.py
src/openai_app/config/: logging.py  settings.py  test_config.py
src/openai_app/core/: __init__.py  agents.py  exceptions.py  models.py  test_core.py
src/openai_app/services/: __init__.py  agent_service.py  app_service.py  test_services.py
src/openai_app/tools/: __init__.py  base.py  calculator.py  registry.py  search.py  test_tools.py  weather.py
src/openai_app/utils/: __init__.py  search_api.py  weather_api.py
